fix vertical-align for comment link

--- a/app/assets/stylesheets/public/_comments.sass
+++ b/app/assets/stylesheets/public/_comments.sass
@@ -93,6 +93,9 @@
         line-height: 13px
         margin: 0 0 5px 0
 
+        a
+          vertical-align: top
+
         .profile_link
           color: #555
           font-size: 12px
